	* An extraordinary number of bug fixes
	* Updated Korean translation
	* Ability to stop animation on buddy icons, hide certain
	  buddy icons, and save people's buddy icons, all through
	  a right-click menu
	* Event handlers in perl passed arguments as elements of
	  an array rather than all concatenated as a string, making
	  perl much easier to use (thanks Dennis Lambe Jr.)

version 0.45 (10/04/2001):
	* New plugin event: event_chat_send_invite
	* Major updates to the perl system (reread PERL-HOWTO and
	  SIGNALS)
	* Major updates to event_chat_* events for plugins (reread
	  SIGNALS)
	* Some GtkIMHtml improvements
	* Various bugfixes
	* Nick Highlighting in chat
	* Tab-completion for nicks in chat (thanks to Sean Egan)
	* Large internal reworkings
	* New Protocol: Gadu-Gadu, written by Arkadiusz Miskiewicz
	* Can choose buddy icon to send (for Oscar)
	* New Translation: Polish translation by Przemysaw Suek

version 0.44 (09/20/2001):
	* More sane scaling of buddy icons (intelligently scale to
	  either 48x48 or 50x50 depending on icon)
	* Have you ever had it happen where you cancel a login and
	  Gaim starts using all the available processing power? I
	  think I fixed that.
	* Temporarily removed Jabber user registration, which wasn't
	  working anyway.
	* Added a spiffy Help button
	* Wrote a plugin for all those people who miss having the
	  chat rooms in their buddy lists (chatlist.so)
	* Updated libfaim
	* Added drop down selection to chat invitation
	* Improved the look of the chat invitation dialog
	* Improved the look of the proxy preferences
	* event_im_recv and event_im_display_rcvd passed whether
	  the message received was auto-response (see SIGNALS)
	* IRC fixes (largly copied from X-Chat)
	* Internal change to how preferences are stored
	* Other bug fixes
	* Option to hide buddy icons

version 0.43 (09/06/2001):
	* Updated German Translation (thanks Daniel Seifert)
	* Can change friendly name in MSN again
	* Bug fixes